# opentanuki

./: .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: app_settings.py  celery.py  settings.py  urls.py
scheduler/: admin.py  api.py  apps.py  context_processors.py  forms.py  runner.py  signals.py  sse.py  tasks.py  tests.py  urls.py
scheduler/migrations/: 0001_initial.py  0002_task_continue_conversation.py
scheduler/models/: __init__.py  _base.py  run.py  setting.py  task.py
scheduler/routes/dashboard/: __init__.py  _router.py  get_index.py  index.py
scheduler/routes/tasks/: _router.py  get_runs.py  index.py  post_trigger.py
scheduler/static/scheduler/js/: dashboard.js  task_detail.js
scheduler/templates/registration/: login.html
scheduler/templates/scheduler/: _btn.html  _btn_run.html  _card_end.html  _card_start.html  _dir_browser.html  _favorite_btn.html  _label.html  _recent_runs_rows.html  _run_status.html  _status_badge.html  _task_card.html  _task_grid.html  _task_runs_rows.html  _tt.html  auth_help.html  base.html  dashboard.html  run_detail.html  runs.html  settings.html  task_detail.html  task_form.html
scheduler/templatetags/: scheduler_extras.py
scheduler/views/: __init__.py  _helpers.py  auth_help.py  dashboard.py  dir_browse.py  run_detail.py  run_status.py  run_stream.py  runs_list.py  settings_view.py  task_clear_session.py  task_delete.py  task_detail.py  task_edit.py  task_favorite.py  task_new.py
