[project]
name = "opentanuki"
version = "0.1.0"
description = "Claude scheduler — run `claude -p` on cron/interval with live streaming UI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.6.3",
    "croniter>=6.2.2",
    "django>=6.0.5",
    "django-celery-beat>=2.9.0",
    "django-ninja>=1.6.2",
    "granian[reload]>=2.7.4",
    "pydantic-settings>=2.14.1",
    "redis>=6.4.0",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "coverage>=7.13.5",
]
